# the-daemon

./: Cargo.toml  README.md
src/: core.rs  data.db  deserialize.rs  main.rs  utils.rs
tests/: test.py
