[package]
name = "SuperDaemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "super-daemon"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
dirs = "4.0.0"
termimad = "0.20.2"
crossterm = "0.23.2"
chrono = "0.4.19"